@@ -248,6 +248,11 @@
      'tag '("td" "b")
      'attribute (list "align" "left"))
 
+    (gnc:html-document-set-style!
+     ssdoc "centered-label-cell"
+     'tag '("td" "b")
+     'attribute (list "align" "center"))
+
     ;; don't surround marked-up links with <a> </a>
     (if (not links?)
 	(gnc:html-document-set-style!
