@@ -3,6 +3,9 @@
 	* "global-replace for-each-in-order for-each" because the former
 	  does not exist in current guiles.  Fixes bugID 87693
 
+	* add "centered-label-cell" markup type to define a cell with tag
+	  'b' and attribute "align center".
+
 2002-07-08  Derek Atkins  <derek@ihtfp.com>
 
 	* kvp-option-registry.scm: create a registry of kvp-options
